styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
    font-family: 'NEUTRAFACE';
    font-style: normal;
    font-weight: 100;
    src: url('.././public/Neutraface Text Light.otf');
}
@font-face {
    font-family: 'NEUTRAFACE';
    font-style: italic;
    font-weight: 100;
    src: url('.././public/Neutraface Text Light Italic.otf');
}
@font-face {
    font-family: 'NEUTRAFACE';
    font-style: normal;
    font-weight: 300;
    src: url('.././public/Neutraface Text Book.otf');
}
@font-face {
    font-family: 'NEUTRAFACE';
    font-style: italic;
    font-weight: 300;
    src: url('.././public/Neutraface Text Book Italic.otf');
}
@font-face {
    font-family: 'NEUTRAFACE';
    font-style: italic;
    font-weight: 600;
    src: url('.././public/Neutraface Text Demi.otf');
}
@font-face {
    font-family: 'NEUTRAFACE';
    font-style: italic;
    font-weight: 600;
    src: url('.././public/Neutraface Text Demi Italic.otf');
}
@font-face {
    font-family: 'NEUTRAFACE';
    font-style: normal;
    font-weight: 900;
    src: url('.././public/Neutraface Text Bold.otf');
}
@font-face {
    font-family: 'NEUTRAFACE';
    font-style: italic;
    font-weight: 900;
    src: url('.././public/Neutraface Text Bold Italic.otf');
}

html,
body,
#__next {
    height: 100%;
    width: 100%;
}

@page {
    margin: 0;
    -webkit-print-color-adjust: exact !important;
    print-color-adjust: exact !important;
    size: A4 !important;
}
@media print {
    html,
    body,
    #__next,
    #__next > main {
        @apply bg-secondary;
        @apply text-white;
        -webkit-print-color-adjust: exact !important;
        print-color-adjust: exact !important;
        display: block !important;
    }
    html {
        /* petty hack to make the html fit page */
        /* TODO: fix this to be calculated somehow */
        height: 593.5mm !important;
    }
    #__next {
        padding: 2rem;
    }
}
.unselectable {
    -webkit-user-select: none; /* Safari */
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* IE10+/Edge */
    user-select: none; /* Standard */
}

#skills {
    background: rgb(255, 243, 243);
    background: linear-gradient(
        345deg,
        rgba(255, 243, 243, 1) 0%,
        rgba(240, 219, 79, 1) 23%,
        rgba(60, 135, 58, 1) 84%
    );
}

html {
    overflow: overlay;
}
html::-webkit-scrollbar {
    width: 10px;
}

html::-webkit-scrollbar-track {
    background-color: transparent;
}
html::-webkit-scrollbar-track-piece {
    display: none;
}
html::-webkit-scrollbar-thumb {
    @apply bg-primary;
    border-radius: 10px;
}

html::-webkit-scrollbar-thumb:hover {
    background: white;
    border-radius: 10px;
}

html::-webkit-scrollbar-thumb:active {
    background: white;
    border-radius: 10px;
}

